--- a/auto-tag-mobile.ipynb
+++ b/auto-tag-mobile.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-21T04:43:46.064213Z",
-     "start_time": "2024-05-21T04:43:45.730057Z"
+     "end_time": "2024-05-23T01:20:37.601811Z",
+     "start_time": "2024-05-23T01:20:28.097665Z"
     }
    },
    "cell_type": "code",
@@ -73,13 +73,13 @@
    ],
    "id": "57d1f97e90e27535",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-21T04:43:46.279918Z",
-     "start_time": "2024-05-21T04:43:46.211209Z"
+     "end_time": "2024-05-23T01:21:00.315557Z",
+     "start_time": "2024-05-23T01:21:00.107821Z"
     }
    },
    "cell_type": "code",
@@ -129,7 +129,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 2
   },
   {
    "metadata": {
@@ -791,12 +791,28 @@
    "execution_count": 30
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-23T01:22:39.862571Z",
+     "start_time": "2024-05-23T01:22:39.722325Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "model.load_state_dict(torch.load(\"best_mobile_modelV3_0.1519_0.9475.pth\"))  # Load the best model\n",
+    "torch.save(model, \"V3_model.pth\")"
+   ],
+   "id": "43c80fb48de28605",
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "43c80fb48de28605"
+   "id": "a89943b62bd1bb5a"
   }
  ],
  "metadata": {
